# jvm-old

./: .gitignore  Cargo.toml  Main.java  README.md  out.wasm
.github/workflows/: rust.yml
java/: Main.java  StaticThing.java  build.sh
java/birb/: Event.java
java/java/lang/: Object.java  String.java
jvm/: Cargo.toml
jvm-test/: Cargo.toml
jvm-test/java/: Main.java  SomeInterface.java
jvm-test/java/birb/: MessageEvent.java  MessageEventSubclass.java
jvm-test/src/: main.rs
jvm/src/: class.rs  heap.rs  lib.rs  thread.rs
jvm/src/linker/: loader.rs
jvm/src/vm/: class.rs  heap.rs  mod.rs  vm.rs
jvm/src/vm/linker/: loader.rs
jvm_test/: Cargo.toml
jvm_test/java/: Main.java  Test.java
jvm_test/java/java/lang/: Object.java
jvm_test/src/: main.rs
src/: lib.rs  main.rs
src/vm/: class.rs  vm.rs
src/vm/linker/: loader.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: control_graph.rs  ir.rs  lib.rs
