[package]
name = "jvm"
version = "0.1.0"
authors = ["Birb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
byteorder = "1.4.2"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
sharded-slab = "0.1.1"